spline #1135 Add "--add-opens" to scalatest plugin arg line, upgrade RapidGen, fix some minor deprecations.